--- a/index.html
+++ b/index.html
@@ -20,11 +20,74 @@
             <button class="btn-primary">Contact Us</button>
         </section>
     </header>
-    <main>
-
+    <main class="main">
+        <section class="failure">
+            <div class="failure-img">
+                <img src="./images/person.png" alt="">
+            </div>
+            <div class="failure-content">
+                <h3 class="failure-title">My failures of previous year</h3>
+                <p class="failure-des">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul>
+                    <li> ✔️ Contrary to popular belief, is not simply.</li>
+                    <li> ✔️ Contrary to popular belief.</li>
+                    <li> ✔️ Contrary to popular , is not simply.</li>
+                    <li> ✔️ Contrary to popular belief, is not simply.</li>
+                    <li> ✔️ Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+        <section class="plans">
+            <h3 class="plans-title">My Plans</h3>
+            <div class="plans-content">
+                <div class="plans-details">
+                    <img src="./images/icons/web.png" alt="">
+                    <h4 class="plan-title">Web Development</h4>
+                    <p class="plans-des">I want to start</p>
+                </div>
+                <div class="plans-details">
+                    <img src="./images/icons/js.png" alt="">
+                    <h4 class="plan-title">Javascript</h4>
+                    <p class="plans-des">I want to learn</p>
+                </div>
+                <div class="plans-details">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h4 class="plan-title">Smoking Habit</h4>
+                    <p class="plans-des">I want to end</p>
+                </div>
+                <div class="plans-details">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h4 class="plan-title">ecommerce</h4>
+                    <p class="plans-des">I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <section class="call-now">
+            <div class="callnow-content">
+                <h1 class="call-title">Awlays keep a positive <br> mindset</h1>
+                <button id="call-btn">Call Now</button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <section class="footer">
+            <div class="footer-item">
+                <div class="footer-content">
+                    <h3 class="footer-title">Future</h3>
+                    <p class="footer-des">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+                    <p class="footer-des">Email : info@gmail.com</p>
+                    <p class="footer-des">Phone : 01500 00 00 00</p>
+                    <img src="./images/icons/fb.png" alt="" class="social-icon"><img src="./images/icons/twitter.png" alt="" class="social-icon"><img src="./images/icons/youtube.png" alt="" class="social-icon">
+                </div>
+                <div class="footer-content">
+                    <h3 class="footer-title">Subscribe</h3>
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="Enter your email">
+                        <input class="contact-btn" type="button" value="Subscribe">
+                    </form>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 
